--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ body {
   color: #3b3b3b;
   -webkit-font-smoothing: antialiased;
   font-smoothing: antialiased;
-  background: #2b2b2b;
+/*  background: #2b2b2b;*/
+  background: #000000cc;
 }
 @media screen and (max-width: 580px) {
   body {
@@ -18,7 +19,7 @@ body {
 .wrapper {
   margin: 0 auto;
   padding: 40px;
-  max-width: 800px;
+  max-width: 1024px;
 }
 
 .table {
@@ -41,33 +42,45 @@ body {
   background: #e9e9e9;
 }
 .row.bbdo_ds{
-  font-size: 18px;
+  font-size: 24px;
   font-weight: 900;
-  line-height: 35px;
+  line-height: 30px;
   color: #e61717;
   background: transparent;
+  text-align: center;
 }
-.row.work_status{
+.current_work{
   font-size: 16px;
   font-weight: 900;
-  line-height: 25px;
+  line-height: 35px;
 
   color: #e4147e;
   background: transparent;
 }
+
+.pipeline_work{
+  font-size: 16px;
+  font-weight: 900;
+  line-height: 35px;
+
+  color: #e4147e;
+  background: transparent;
+}
+
 
 .row.header {
   font-weight: 900;
   color: #ffffff;
   background: #b40cea;
 }
-.row.green {
+.row.blue {
   background: #0099f3;
 }
-.row.blue {
+.row.green {
   background: #2980b9;
 }
-@media screen and (max-width: 580px) {
+
+@media screen and (max-width: 600px) {
   .row {
     padding: 14px 0 7px;
     display: block;
@@ -96,12 +109,12 @@ body {
 }
 
 .cell {
-  padding: 6px 12px;
+  padding: 6px 8px;
   display: table-cell;
 }
-@media screen and (max-width: 580px) {
+@media screen and (max-width: 600px) {
   .cell {
-    padding: 2px 16px;
+    padding: 1px 16px;
     display: block;
   }
 }
