--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 /*  background: #2b2b2b;*/
   background: #000000cc;
 }
-@media screen and (max-width: 580px) {
+@media only screen and (max-width: 700px) {
   body {
     font-size: 16px;
     line-height: 22px;
@@ -22,13 +22,21 @@ body {
   max-width: 1024px;
 }
 
+@media only screen and (max-width: 700px) {
+  .wrapper {
+    margin: 0 auto;
+    padding: 40px;
+    max-width: 1024px;
+  }
+}
+
 .table {
   margin: 0 0 40px 0;
   width: 100%;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   display: table;
 }
-@media screen and (max-width: 580px) {
+@media only screen and (max-width: 700px) {
   .table {
     display: block;
   }
@@ -80,7 +88,7 @@ body {
   background: #2980b9;
 }
 
-@media screen and (max-width: 700px) {
+@media only screen and (max-width: 700px) {
   .row {
     padding: 14px 0 7px;
     display: block;
@@ -112,7 +120,7 @@ body {
   padding: 6px 8px;
   display: table-cell;
 }
-@media screen and (max-width: 700px) {
+@media only screen and (max-width: 700px) {
   .cell {
     padding: 1px 16px;
     display: block;
