--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body {
   -webkit-font-smoothing: antialiased;
   font-smoothing: antialiased;
 /*  background: #2b2b2b;*/
-  background: #000000cc;
+/*  background: #000000cc;*/
+  background: #313131;
 }
 @media only screen and (max-width: 700px) {
   body {
@@ -20,14 +21,6 @@ body {
   margin: 0 auto;
   padding: 40px;
   max-width: 1024px;
-}
-
-@media only screen and (max-width: 700px) {
-  .wrapper {
-    margin: 0 auto;
-    padding: 40px;
-    max-width: 1024px;
-  }
 }
 
 .table {
