--- a/style.css
+++ b/style.css
@@ -18,15 +18,17 @@ body {
 }
 
 .wrapper {
+  /* position: center;  */
   margin: 0 auto;
   padding: 40px;
+  z-index: 100;
   max-width: 1024px;
 }
 
 .table {
   margin: 0 0 40px 0;
   width: 100%;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  /* box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2); */
   display: table;
 }
 @media only screen and (max-width: 700px) {
@@ -46,7 +48,7 @@ body {
   font-size: 24px;
   font-weight: 900;
   line-height: 30px;
-  color: #e61717;
+  color: #ff1d1d;
   background: transparent;
   text-align: center;
 }
@@ -55,7 +57,7 @@ body {
   font-weight: 900;
   line-height: 35px;
 
-  color: #e4147e;
+  color: #ff178d;
   background: transparent;
 }
 
@@ -64,7 +66,7 @@ body {
   font-weight: 900;
   line-height: 35px;
 
-  color: #e4147e;
+  color: #ff178d;
   background: transparent;
 }
 
@@ -107,6 +109,19 @@ body {
     color: #969696;
     display: block;
   }
+}
+
+#bg_video {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  z-index: -100;
+  /* width: 100%;  */
+  height: 100%;
+}
+
+.shadow {
+  text-shadow: 2px 2px 0px #000000;
 }
 
 .cell {
